--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Word Trivia - The Office</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -10,13 +11,11 @@
     <div class="container fluid main">
             <h1>The Office - Word Trivia</h1>
         <div class="row">
-        <div class="col-md-8 offset-md-2">
+        <div class="col-md-8 offset-md-2 col-sm-12">
                <div id="question">
                 <h1>Question 1</h1>
                </div>
                <div class="text-center" id="answers">
-            
-                  
                </div>
                <div id="timer_label">
                    Seconds Remaining: <span id="timer"></span>
@@ -27,6 +26,6 @@
     <script src="assets/javascript/app.js"></script>
     <script>
             setQAButtons()
-            </script>
+    </script>
 </body>
 </html>
