--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 
     <div class="container fluid main">
             <h1>The Office - Word Trivia</h1>
+            <div class="row">
+                <div class="col-md-12">
+                  <div class="alert alert-danger" role="alert" style="display: none" id="status-msg-wrong">
+                        Sorry, that's not the right answer.
+                  </div>
+                  <div class="alert alert-success" role="alert" style="display: none" id="status-msg-correct">
+                        That's right!
+                  </div>
+                </div>
+            </div>
         <div class="row">
         <div class="col-md-8 offset-md-2 col-sm-12">
                <div id="question">
